Update the Xgboost baseline model

--- a/Data_Genration/Data_genration-1.ipynb
+++ b/Data_Genration/Data_genration-1.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,22 +372,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(674, 54)"
+       "(675, 54)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'SMA_20', 'SMA_50',\n",
+       "       'SMA_100', 'SMA_200', 'EMA_20', 'EMA_50', 'EMA_63', 'EMA_100',\n",
+       "       'EMA_200', 'MACD', 'ADX', 'RSI', 'Stoch_Osc', 'Williams_R', 'BBlow',\n",
+       "       'BBmid', 'BBupp', 'ATR', 'OBV', 'CMF', 'Price_Change', 'Pct_Change',\n",
+       "       'Close_Lag_1', 'Volume_Lag_1', 'Close_Lag_2', 'Volume_Lag_2',\n",
+       "       'Close_Lag_3', 'Volume_Lag_3', 'Close_Lag_5', 'Volume_Lag_5',\n",
+       "       'Close_Lag_10', 'Volume_Lag_10', 'Close_Roll_Mean_5',\n",
+       "       'Close_Roll_Std_5', 'Volume_Roll_Mean_5', 'Close_Roll_Mean_10',\n",
+       "       'Close_Roll_Std_10', 'Volume_Roll_Mean_10', 'Close_Roll_Mean_20',\n",
+       "       'Close_Roll_Std_20', 'Volume_Roll_Mean_20', 'Relative_Volume',\n",
+       "       'Day_of_Week', 'Is_Month_End', 'VWAP', 'High_Volume',\n",
+       "       'Significant_Price_Move', 'Volume_Spike_With_Price_Move'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
